added changes suggested by you in email.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <li><a href="#publications">Publications</a></li>
           <li><a href="#cv">CV</a></li>
           <li><a href="#posters">Posters</a></li>
+          <li><a href="#teaching">Teaching</a></li>
           <li><a href="#contact">Contact</a></li>
           <!-- <li><a href="#patents">Patents</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -106,13 +107,13 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, working under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>. 
+        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, working under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>.
         <br>
         <br>
         Previously, I have obtained a Masters in Machine Learning from <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> at CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian Statistical Institute</a>, Kolkata.
         <br>
         <br>
-        In my free time, I love to perform music, especially Bollywood music and Zumba!
+        In my free time, I love to perform music, especially Bollywood music, paint and Zumba!
       </div>
 
       <hr>
@@ -138,7 +139,15 @@
         <br>
         <div class="muted">We develop a test for whether a mixture of Gaussians provides a better fit to the data relative to a single Gaussian, without assuming that either model is correct. We then use this test to develop a clustering algorithm that comes equipped with significance guarantees. We show how the test can be used in a hierarchical as well as a sequential manner for clustering.</div>
         <br>
-        Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
+        <b>Purvasha Chakravarti</b>, Mikael Kuusela and Larry Wasserman.
+        <br>
+        <a href="#">Model-Independent Detection of New Physics Signals Using Semi-Supervised Random Forest Tests.</a>
+        <br>
+        In preparation
+        <br>
+        <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed MC model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose two tests, one based on the performance of a random forest in differentiating between two distributions and the other that is based on the relative fit of two different Gaussian Mixture Models.</div>
+        <br>
+        Yotam Hechtlinger, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
         A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a>
         <br>
@@ -164,51 +173,39 @@
 
       <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
       <div class="row-fluid" align="justify">
-        <b>Recent Advances in Dimension Reduction and Clustering</b>
+        <b>Gaussian Mixture Clustering Using Relative Tests of Fit.</b>
         <br>
-        Joint work with Larry Wasserman and Sivaraman Balakrishnan (<a href=https://ww2.amstat.org/meetings/jsm/2019/onlineprogram/AbstractDetails.cfm?abstractid=304606>slides</a>).
-        <br>
-        Contributed Talk at Joint Statistical Meetings, Denver, Colorado, 2019.
+        Contributed Talk at Joint Statistical Meetings, Denver, Colorado, 2019 (<a href=https://ww2.amstat.org/meetings/jsm/2019/onlineprogram/AbstractDetails.cfm?abstractid=304606>slides</a>).
         <br>
         <br>
         <b>A Generalization of Convolutional Neural Networks to Graph-Structured Data</b>
-        <br>
-        Joint work with Yotam Hechtlinger and Jining Qin.
         <br>
         Poster at National Academy of Sciences Arthur M. Sackler Colloquium, The Science of Deep Learning, Washington, D.C., 2019.
         <br>
         <br>
         <b>Hierarchical Significance Testing for Gaussian Mixture Clustering</b>
         <br>
-        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
-        <br>
         Contributed Talk at Joint Statistical Meetings, Vancouver, Canada, 2018.
         <br>
         <br>
         <b>Gaussian Mixture Clustering Using Relative Tests of Fit (RIFTs)</b>
-        <br>
-        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
         <br>
         Working Group on Model-Based Clustering Summer Session, Ann Arbor, Michigan, 2018.
         <br>
         <br>
         <b>Statistical Significance of k-Means Clustering</b>
         <br>
-        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
-        <br>
         Speed Presentation at Joint Statistical Meetings, Baltimore, Maryland, 2017.
         <br>
         <br>
         <b>Statistical Analysis of the Chikungunya Fever</b>
-        <br>
-        Joint work with Bill Eddy and Virginia Dato.
         <br>
         Women in Statistics and Data Science Conference, Charlotte, North Carolina, 2016.
         <br>
         <br>
         <b>Women in Statistics at Carnegie Mellon University</b>
         <br>
-        Joint work with Shannon Gallagher.
+        Jointly presented with Shannon Gallagher.
         <br>
         Women in Statistics and Data Science Conference, Charlotte, North Carolina, 2016.
       </div>
@@ -217,9 +214,9 @@
 
       <h4 class="muted" id="cv">Awards and Recognition</h4>
       <div class="row-fluid" align="justify">
-        <b>Honorable Mention for the 2019 Caucus for Women in Statistics (CWS) Do-Bui Travel Award.</b>
+        <b>Honorable Mention for the 2019 Do-Bui Travel Award.</b>
         <br>
-        Caucus for Women in Statistics (CWS), Joint Statistical Meetings, 2019.
+        Received  an  Honorable  Mention  for  Do-Bui  Travel  Award  given  by  the  Caucus  for  Women  inStatistics (CWS), Joint Statistical Meetings, 2019.
         <br>
         <br>
         <b>National Level Scholarship</b>
@@ -294,7 +291,7 @@
 
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
-        Please down load my CV from <a href="cv.pdf">here</a>.
+        Please down load my CV from <a href="resume.pdf">here</a>.
       </div>
 
       <hr>
