renamed resume to cv
linked buttons correctly

fixed minor things

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li><a href="#research">Research Interests</a></li>
           <li><a href="#publications">Publications</a></li>
           <li><a href="#cv">CV</a></li>
-          <li><a href="#posters">Posters</a></li>
+          <!--<li><a href="#posters">Posters</a></li>-->
           <li><a href="#teaching">Teaching</a></li>
           <li><a href="#contact">Contact</a></li>
           <!-- <li><a href="#patents">Patents</a></li>
@@ -143,7 +143,7 @@
         <br>
         <a href="#">Model-Independent Detection of New Physics Signals Using Semi-Supervised Random Forest Tests.</a>
         <br>
-        In preparation
+        In preparation.
         <br>
         <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed MC model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose two tests, one based on the performance of a random forest in differentiating between two distributions and the other that is based on the relative fit of two different Gaussian Mixture Models.</div>
         <br>
@@ -161,7 +161,7 @@
         <br>
         <div class="muted">We develop a multi-country compartment model and a multi-country time series model to predict the spread of Chikungunya in the Americas.</div>
         <br>
-        Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and <b>Purvasha Chakravarti</b>.
+        Sunder Ram Krishnan, Chandra Sekhar Seelamantula, and <b>Purvasha Chakravarti</b>.
         <br>
         <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a>
         <br>
@@ -171,7 +171,7 @@
       </div>
       <hr>
 
-      <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
+      <h4 class="muted" id="posters">Selected Presentations and Posters</h4>
       <div class="row-fluid" align="justify">
         <b>Gaussian Mixture Clustering Using Relative Tests of Fit.</b>
         <br>
@@ -212,7 +212,7 @@
 
       <hr>
 
-      <h4 class="muted" id="cv">Awards and Recognition</h4>
+      <h4 class="muted" id="awards">Awards and Recognition</h4>
       <div class="row-fluid" align="justify">
         <b>Honorable Mention for the 2019 Do-Bui Travel Award.</b>
         <br>
@@ -236,7 +236,7 @@
 
       <hr>
 
-      <h4 class="muted" id="cv">Teaching Experience</h4>
+      <h4 class="muted" id="teaching">Teaching Experience</h4>
       <div class="row-fluid" align="justify">
         <b>Instructor</b>
         <br>
@@ -291,12 +291,12 @@
 
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
-        Please down load my CV from <a href="resume.pdf">here</a>.
+        Please down load my CV from <a href="cv.pdf">here</a>.
       </div>
 
       <hr>
 
-      <h4 class="muted" id="cv">Contact</h4>
+      <h4 class="muted" id="contact">Contact</h4>
       <div class="row-fluid" align="justify">
         Email: pchakrav [at] stat [dot] cmu [dot] edu
       </div>
