Minor fixes to site

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         My research mainly focuses on developing theory and methods in the fields of statistics and machine learning, to understand complex high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering and density estimation algorithms and applying them to science and technology.
         <br>
         <br>
-        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes a novel clustering algorithm that comes equipped with a significance guarantee. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a> and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets. Recently, I have been researching different anamoly detection algorithms and different ways to understand the performance of a classification algorithm.
+        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes a novel clustering algorithm that comes equipped with a significance guarantee. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a> and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets. Recently, I have been researching different anomaly detection algorithms and different ways to understand the performance of a classification algorithm.
       </div>
 
       <hr>
@@ -141,11 +141,11 @@
         <br>
         <b>Purvasha Chakravarti</b>, Mikael Kuusela and Larry Wasserman.
         <br>
-        <a href="#">Model-Independent Detection of New Physics Signals Using Semi-Supervised Random Forest Tests.</a>
+        <a href="#">Model-Independent Detection of New Physics Signals Using Semi-Supervised Classifier Tests.</a>
         <br>
         In preparation.
         <br>
-        <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed MC model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose two tests, one based on the performance of a random forest in differentiating between two distributions and the other that is based on the relative fit of two different Gaussian Mixture Models.</div>
+        <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed Monte Carlo model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose two tests, one based on the performance of a classifier in differentiating between two distributions and the other that is based on the relative fit of two different Gaussian Mixture Models.</div>
         <br>
         Yotam Hechtlinger, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
@@ -291,7 +291,7 @@
 
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
-        Please down load my CV from <a href="cv.pdf">here</a>.
+        Please download my CV from <a href="cv.pdf">here</a>.
       </div>
 
       <hr>
