--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -46,7 +46,7 @@
         margin-top: 28px;
       }
     </style>
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -54,11 +54,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122655878-1"></script>
@@ -89,14 +89,14 @@
           <li><a href="#resume">Resume</a></li>
           <li><a href="#art_circle">Art Circle</a></li> -->
         </ul>
-        <h3><a class="muted" href="https://purvashac.github.io">Purvasha Chakravarti</a></h3>
+        <h3><a class="muted" href="https://www.ma.imperial.ac.uk/~pchakrav/">Purvasha Chakravarti</a></h3>
       </div>
 
       <hr>
 
       <div class="row-fluid">
         <div class="span6" align="center">
-          <img src="../images/purvasha.jpg" height=300px width=300px class="img-rounded">
+          <img src="images/purvasha.jpg" height=300px width=300px class="img-rounded">
         </div>
         <div class="span6" align="center">
           <!-- <img src="../images/tag_cloud.png" height=300px width=300px class="img-rounded"> -->
@@ -107,10 +107,10 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, working under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>.
+        I am a Chapman Fellow in Mathematics in the <a href="https://www.imperial.ac.uk/statistics">Statistics Section</a> of the <a href="https://www.imperial.ac.uk/mathematics">Department of Mathematics</a> at <a href="https://www.imperial.ac.uk/">Imperial College London</a>. 
         <br>
         <br>
-        Previously, I have obtained a Masters in Machine Learning from <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> at CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian Statistical Institute</a>, Kolkata.
+        Previously, I have received a Ph.D. in Statistics from the <a href="http://stat.cmu.edu">Department of Statistics & Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>. I have also obtained a Masters in Machine Learning from the <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> at CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian Statistical Institute</a>, Kolkata.
         <br>
         <br>
         In my free time, I love to perform music, especially Bollywood music, paint and Zumba!
@@ -120,32 +120,50 @@
 
       <h4 class="muted" id="research">Research Interests</h4>
       <div class="row-fluid" align="justify">
-        My research mainly focuses on developing theory and methods in the fields of statistics and machine learning, to understand complex high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering and density estimation algorithms and applying them to science and technology.
+        My research mainly focuses on developing theory and methods in the fields of statistics and machine learning, to understand complex high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering, anomaly detection, and interpretability algorithms and applying them to applications in science.
         <br>
         <br>
-        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes a novel clustering algorithm that comes equipped with a significance guarantee. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a> and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets. Recently, I have been researching different anomaly detection algorithms and different ways to understand the performance of a classification algorithm.
+        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes, develops and analyzes, both theoretically and empirically, high-dimensional clustering algorithms with significance guarantees. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a>, <a href="http://www.stat.cmu.edu/~jinglei/">Jing Lei</a>, and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets in model-independent and model-dependent settings. Recently, I have also been working on developing interpretability methods to interpret, understand and characterize the surface of high-dimensional classifiers, to identify directions in the feature space with the most variability with Mikael Kuusela, Larry Wasserman, and <a href="https://www.ma.imperial.ac.uk/~hbattey/">Heather Battey</a>.
       </div>
 
       <hr>
 
       <h4 class="muted" id="publications">Publications and Reports</h4>
       <div class="row-fluid" align="justify">
+        <b>Purvasha Chakravarti</b>, Mikael Kuusela, and Larry Wasserman.
+        <br>
+        <a href="#">Robust Signal Detection using a Classifier Decorrelated through Optimal Transport (CDOT).</a>
+        <br>
+        In preparation.
+        <br>
+        <div class="muted">We propose a signal detection algorithm, applied to particle physics, using a supervised classifier that is decorrelated with an auxiliary variable for the background data through optimal transport. We then fit a semi-parametric mixture model to the auxiliary variable for different thresholds of the transformed classifier to detect the presence of signal. This ensures that the signal detection procedure is robust to the systematic differences in the background distribution.</div>
+        <br>
+        <b>Purvasha Chakravarti</b>, Mikael Kuusela, Jing Lei and Larry Wasserman.
+        <br>
+        <a href="https://arxiv.org/abs/2102.07679">Model-Independent Detection of New Physics Signals Using Semi-Supervised Classifier Tests.</a>
+        <br>
+        Major revision at Annals of Applied Statistics (AOAS) (arXiv preprint arXiv:2102.07679). Supplementary Material (<a href="Supplementary.pdf">here</a>)
+        <br>
+        <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed Monte Carlo model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose three tests. Two are based on the performance of a classifier in differentiating between two distributions measured using the Area under the Curve (AUC) and the misclassification error (MCE) statistics. The third test is based on estimating the likelihood ratio using the classifier output.</div>
+        <br>
+      	<b>Purvasha Chakravarti</b>. <a href="thesis.pdf">
+        <br>
+        Inference for Clustering and Anomaly Detection.</a>
+        <br>
+        Ph.D. thesis at Carnegie Mellon University. 
+        Ph.D. defense slides (<a href="Defense_Talk.pdf">here</a>).
+        <br>
+        <div class="muted">In this thesis, we take an inferential approach to searching for evidence that indicates the presence of two or more collections of data, with different distributions, in a single data set. It addresses two fundamental questions relating to this: (a)  How can we perform clustering that results in statistically significant clusters? (b) In high energy physics, how can we detect new signals in experimental data, that are not explained by known physics models, without assuming a model for the new signal?</div>
+        <br>
         <b>Purvasha Chakravarti</b>, Sivaraman Balakrishnan, and Larry Wasserman. <a href="http://arxiv.org/abs/1910.02566">
         <br>
         Gaussian Mixture Clustering Using Relative Tests of Fit.</a>
         <br>
-        Submitted to Journal of the American Statistical Association (JASA) Theory and Methods (2019) (arXiv preprint arXiv:1910.02566)
+        Submitted to Journal of the Royal Statistical Society Series B (Statistical Methodology). (arXiv preprint arXiv:1910.02566)
         Ph.D. thesis proposal slides (<a href="proposal_slides.pdf">here</a>).
+        R Code (<a href="RIFT_Code.zip">here</a>).
         <br>
         <div class="muted">We develop a test for whether a mixture of Gaussians provides a better fit to the data relative to a single Gaussian, without assuming that either model is correct. We then use this test to develop a clustering algorithm that comes equipped with significance guarantees. We show how the test can be used in a hierarchical as well as a sequential manner for clustering.</div>
-        <br>
-        <b>Purvasha Chakravarti</b>, Mikael Kuusela and Larry Wasserman.
-        <br>
-        <a href="#">Model-Independent Detection of New Physics Signals Using Semi-Supervised Classifier Tests.</a>
-        <br>
-        In preparation.
-        <br>
-        <div class="muted">In high energy physics, an important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed Monte Carlo model) and the distribution of the actual observations, which could be a mixture of background and signal events. We propose two tests, one based on the performance of a classifier in differentiating between two distributions and the other that is based on the relative fit of two different Gaussian Mixture Models.</div>
         <br>
         Yotam Hechtlinger, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
@@ -173,9 +191,51 @@
 
       <h4 class="muted" id="posters">Selected Presentations and Posters</h4>
       <div class="row-fluid" align="justify">
-        <b>Gaussian Mixture Clustering Using Relative Tests of Fit.</b>
+        <b>Search for New Physics Signals Using Interpretable Classifiers.</b>
+        <br>
+        Statistics Seminar in the Statistical Laboratory,  Department of Pure Mathematics and Mathematical Statistics (DPMMS), University of Cambridge, scheduled for February 2022.
+        <br>
+        Maths Inspirational Lecture, Imperial College London, scheduled for January 2022.
+        <br>
+        School of Mathematics, The University of Edinburgh, December 2021.
+        <br>
+        School of Mathematics, Cardiff University, December 2021.
+        <br>
+        School of Mathematics and Statistics, University of Sheffield, November 2021.
+        <br>
+        School of Mathematical Sciences, Queen Mary University of London, November 2021.
+        <br>
+        <br>
+        <b>Clustering with Significance Guarantees Using Relative Tests of Fit (RIFT).</b>
+        <br>
+        The Analytics and Operations Group, Imperial College Business School, November 2021.
+        <br>
+        <br>
+        <b>Model-Independent Detection of New Physics Signals Using Interpretable Semi-Supervised Classifier Tests.</b>
+        <br>
+        <a href= https://indico.cern.ch/event/995154/>Inter-experiment Machine Learning (IML) Working Group, CERN, 2021</a> (<a href=https://indico.cern.ch/event/995154/contributions/4182817/attachments/2190786/3702672/Model-Independent_Detection_IML.pdf>slides</a>, <a href=https://indico.cern.ch/event/995154/contributions/4182817/attachments/2190786/3704543/IML_20200216_4.mov>talk</a>).
+        <br>
+        Contributed Talk at Joint Statistical Meetings, Virtual Conference, 2021.
+        <br>
+        <a href= https://indico.cern.ch/event/852553/timetable/>4th Inter-experiment Machine Learning (IML) Workshop, CERN, 2020</a> (<a href=https://indico.cern.ch/event/852553/contributions/4059836/attachments/2128742/3584449/IMLWorkshop2020.pdf>slides</a>, <a href=https://indico.cern.ch/event/852553/contributions/4059836/attachments/2128742/3597359/13%20-%20Purvasha%20Chakravarti%20.mp4>talk</a>).
+        <br>
+        Statistical Inference & Machine Learning Workshop in the Big Data and Machine Learning in the Natural Sciences Group, Imperial College London, 2021.
+        <br>
+        Centres for Doctoral Training (CDT) Seminar, Imperial College London, 2020.
+        <br>
+        <br>
+        <b>Inference for Clustering and Anomaly Detection.</b>
+        <br>
+        Statistics seminar, Imperial College London, 2020.
+        <br>
+        Chapman Fellowship Interview, Department of Mathematics, Imperial College London, 2020.
+        <br>
+        <br>
+        <b>Gaussian Mixture Clustering Using Relative Tests of Fit (RIFTs)</b>
         <br>
         Contributed Talk at Joint Statistical Meetings, Denver, Colorado, 2019 (<a href=https://ww2.amstat.org/meetings/jsm/2019/onlineprogram/AbstractDetails.cfm?abstractid=304606>slides</a>).
+        <br>
+        Working Group on Model-Based Clustering Summer Session, Ann Arbor, Michigan, 2018.
         <br>
         <br>
         <b>A Generalization of Convolutional Neural Networks to Graph-Structured Data</b>
@@ -186,11 +246,6 @@
         <b>Hierarchical Significance Testing for Gaussian Mixture Clustering</b>
         <br>
         Contributed Talk at Joint Statistical Meetings, Vancouver, Canada, 2018.
-        <br>
-        <br>
-        <b>Gaussian Mixture Clustering Using Relative Tests of Fit (RIFTs)</b>
-        <br>
-        Working Group on Model-Based Clustering Summer Session, Ann Arbor, Michigan, 2018.
         <br>
         <br>
         <b>Statistical Significance of k-Means Clustering</b>
@@ -240,49 +295,59 @@
       <div class="row-fluid" align="justify">
         <b>Instructor</b>
         <br>
-        CMU 36-225 Introduction to Probability Theory
+        Data Science (Imperial College London MATH97309)
         <br>
-        Summer 2019 with 43 students.
-        <br>
-        <br>
-        CMU 36-200 Reasoning with Data
-        <br>
-        Summer 2018 with 8 students.
+        Spring 2022 with 70 students and Spring 2021 with 62 students. Postgraduate course for the MSc Statistics program.
         <br>
         <br>
-        CMU 36-226 Introduction to Statistical Inference
+        Statistical Graphics and Visualization (CMU 36-315)
         <br>
-        Summer 2016 with 26 students, 2017 with 31 students.
+        Summer 2020 with 32 students. 3rd year undergraduate course.
+        <br>
+        <br>
+        Introduction to Probability Theory (CMU 36-225)
+        <br>
+        Summer 2019 with 43 students. 2nd year undergraduate course.
+        <br>
+        <br>
+        Reasoning with Data (CMU 36-200)
+        <br>
+        Summer 2018 with 8 students. 1st year undergraduate course.
+        <br>
+        <br>
+        Introduction to Statistical Inference (CMU 36-226)
+        <br>
+        Summer 2016 with 26 students, 2017 with 31 students. 2nd year undergraduate course.
         <br>
         <br>
         <b>Teaching assistant</b>
         <br>
-        CMU 36-303 Sampling, Survey and Society
+        Sampling, Survey and Society (CMU 36-303)
         <br>
         Spring 2019.
         <br>
         <br>
-        CMU 36-401 Modern Regression
+        Modern Regression (CMU 36-401)
         <br>
         Fall 2018, Fall 2014.
         <br>
         <br>
-        CMU 36-402 Advanced Methods for Data Analysis
+        Advanced Methods for Data Analysis (CMU 36-402)
         <br>
         Spring 2018, Spring 2017, Spring 2016.
         <br>
         <br>
-        CMU 36-705 Intermediate Statistics
+        Intermediate Statistics (CMU 36-705)
         <br>
         Fall 2017, Fall 2016.
         <br>
         <br>
-        CMU 36-225 Introduction to Probability Theory
+        Introduction to Probability Theory (CMU 36-225)
         <br>
         Fall 2015.
         <br>
         <br>
-        CMU 36-625 Probability and Mathematical Statistics (Hons.)
+        Probability and Mathematical Statistics (Hons., CMU 36-625)
         <br>
         Spring 2015.
       </div>
@@ -298,7 +363,7 @@
 
       <h4 class="muted" id="contact">Contact</h4>
       <div class="row-fluid" align="justify">
-        Email: pchakrav [at] stat [dot] cmu [dot] edu
+        Email: p [dot] chakravarti [at] imperial [dot] ac [dot] uk
       </div>
 
     </div> <!-- /container -->
@@ -306,19 +371,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-alert.js"></script>
+    <script src="assets/js/bootstrap-modal.js"></script>
+    <script src="assets/js/bootstrap-dropdown.js"></script>
+    <script src="assets/js/bootstrap-scrollspy.js"></script>
+    <script src="assets/js/bootstrap-tab.js"></script>
+    <script src="assets/js/bootstrap-tooltip.js"></script>
+    <script src="assets/js/bootstrap-popover.js"></script>
+    <script src="assets/js/bootstrap-button.js"></script>
+    <script src="assets/js/bootstrap-collapse.js"></script>
+    <script src="assets/js/bootstrap-carousel.js"></script>
+    <script src="assets/js/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
