--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        I am a Chapman Fellow in Mathematics in the <a href="https://www.imperial.ac.uk/statistics">Statistics Section</a> of the <a href="https://www.imperial.ac.uk/mathematics">Department of Mathematics</a> at <a href="https://www.imperial.ac.uk/">Imperial College London</a>. 
+        I am a Lecturer (Assistant Professor) in Statistical Science in the <a href="https://www.ucl.ac.uk/statistics">Department of Statistical Science</a> at <a href="https://www.ucl.ac.uk">University College London (UCL)</a>. I joined UCL in June 2022, prior to which I was a Chapman Fellow in Mathematics in the <a href="https://www.imperial.ac.uk/statistics">Statistics Section</a> of the <a href="https://www.imperial.ac.uk/mathematics">Department of Mathematics</a> at <a href="https://www.imperial.ac.uk/">Imperial College London</a>. 
         <br>
         <br>
         Previously, I have received a Ph.D. in Statistics from the <a href="http://stat.cmu.edu">Department of Statistics & Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>. I have also obtained a Masters in Machine Learning from the <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> at CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian Statistical Institute</a>, Kolkata.
@@ -120,10 +120,15 @@
 
       <h4 class="muted" id="research">Research Interests</h4>
       <div class="row-fluid" align="justify">
-        My research mainly focuses on developing theory and methods in the fields of statistics and machine learning, to understand complex high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering, anomaly detection, and interpretability algorithms and applying them to applications in science.
+        My research focuses on developing scalable and interpretable machine learning methods, with statistical significance guarantees, to analyze high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering, anomaly detection, and interpretability algorithms and applying them to applications in science. 
         <br>
         <br>
-        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes, develops and analyzes, both theoretically and empirically, high-dimensional clustering algorithms with significance guarantees. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a>, <a href="http://www.stat.cmu.edu/~jinglei/">Jing Lei</a>, and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets in model-independent and model-dependent settings. Recently, I have also been working on developing interpretability methods to interpret, understand and characterize the surface of high-dimensional classifiers, to identify directions in the feature space with the most variability with Mikael Kuusela, Larry Wasserman, and <a href="https://www.ma.imperial.ac.uk/~hbattey/">Heather Battey</a>.
+        My current research includes the following themes:
+        <ol>
+        <li>Inference for Clustering: developing and analyzing, both theoretically and empirically, high-dimensional clustering algorithms with significance guarantees.</li>
+        <li>Signal Detection in Particle Physics: developing tests that can detect new signals in particle physics data sets in model-independent and model-dependent settings.</li>
+        <li>Interpretability of High-dimensional Classifiers: developing active subspace search to model the surface of the classifier, identify directions with the most variability, and identify relationships between features that influence the classifier.</li>
+        </ol>
       </div>
 
       <hr>
@@ -363,7 +368,7 @@
 
       <h4 class="muted" id="contact">Contact</h4>
       <div class="row-fluid" align="justify">
-        Email: p [dot] chakravarti [at] imperial [dot] ac [dot] uk
+        Email: p [dot] chakravarti [at] ucl [dot] ac [dot] uk
       </div>
 
     </div> <!-- /container -->
